[project]
name = "comfyui-jmespath"
description = "A ComfyUI node that tuns a JMESPath query against input JSON and outputs the result"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["jmespath-community"]
requires-python = ">= 3.8"
authors = [
    {name = "Gremlation", email = "gremlation@proton.me"},
]
maintainers = [
    {name = "Gremlation", email = "gremlation@proton.me"},
]
readme = "README.md"
keywords = ["ComfyUI"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/gremlation/ComfyUI-JMESPath"

[tool.comfy]
PublisherId = "gremlation"
DisplayName = "ComfyUI-JMESPath"
